--- a/application-pro.properties
+++ b/application-pro.properties
@@ -9,7 +9,7 @@ mysql.dataSource.size=2
 
 mysql.dataSource1.name=config
 mysql.dataSource1.driverClassName=com.mysql.cj.jdbc.Driver
-mysql.dataSource1.url=jdbc:mysql://192.168.0.1:3306/xnetty_config?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
+mysql.dataSource1.url=jdbc:mysql://192.168.0.1:3306/xhigher_config?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
 mysql.dataSource1.user=root
 mysql.dataSource1.password=cheercent
 mysql.dataSource1.cachePrepStmts=true
@@ -19,7 +19,7 @@ mysql.dataSource1.maximumPoolSize=2
 
 mysql.dataSource2.name=business
 mysql.dataSource2.driverClassName=com.mysql.cj.jdbc.Driver
-mysql.dataSource2.url=jdbc:mysql://192.168.0.1:3306/xnetty_business?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
+mysql.dataSource2.url=jdbc:mysql://192.168.0.1:3306/xhigher_business?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
 mysql.dataSource2.user=root
 mysql.dataSource2.password=cheercent
 mysql.dataSource2.cachePrepStmts=true
